--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1>Bismillah!</h1>
-<p>some content here</p>
+<p>some content here....</p>
 <p>some content there...</p>
     
 </div>
