--- a/app/views/email.html
+++ b/app/views/email.html
@@ -1,3 +1,3 @@
 <div>
-    This is your email!! <br/> Reall?? You must be kidding!!. 
+    This is your email!! <br/> Really?? You must be kidding!!. 
 </div>
