--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>Bismillah!</h1>
+  <h1>Angular JS!</h1>
 <p>some content here....</p>
 <p>some content there...</p>
     
