--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,9 +4,9 @@ body {
   padding-bottom: 20px;
 }
 
-p::first-line {
+p::first-letter {
     color: #999966;
-    font-size:x-small;
+    font-size:x-large;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
